# drf-perm-control

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/drf_perm_control/: __init__.py  permissions.py
tests/: test_permissions.py
